fixed featured areas gap issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -142,7 +142,6 @@ nav a {
 .featured-flowers {
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
 .featured-flowers-container {
@@ -150,8 +149,9 @@ nav a {
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    gap: 180px;
+    gap: 48px;
     background-color: (229, 84, 115, 0.05);
+    margin-top: 178px;
 }
 
 .featured-flowers-text {
@@ -163,11 +163,8 @@ nav a {
 
 .featured-flowers-title {
     color: #272727;
-    font-family: Lato;
     font-size: 40px;
-    font-style: normal;
     font-weight: 800;
-    line-height: normal;
 }
 
 .featured-flowers-description {
@@ -177,7 +174,6 @@ nav a {
     color: rgba(39, 39, 39, 0.60);
     text-align: center;
     font-size: 18px;
-    font-style: normal;
     font-weight: 400;
     line-height: 30px;
     margin: 32px 0px;
